[package]
name = "secure-wireshark"
version = "0.1.0"
edition = "2021"
description = "Encrypted packet capture tool with Wireshark integration"
license = "MIT"
repository = "https://github.com/0xAr0k/wireshark-rs"
authors = ["Arok"]

[lib]
name = "secure_wireshark"
path = "src/lib.rs"

[[bin]]
name = "niskala"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "process", "io-util", "fs", "io-std", "macros", "time", "sync", "net"] }
aes-gcm = "0.10"
rpassword = "7.0"
dirs = "5.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
memmap2 = "0.9"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
regex = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio-tungstenite = "0.21"
tungstenite = "0.21"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
